# h2session

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  rustfmt.toml
crates/h2session/: Cargo.toml
crates/h2session/src/: frame.rs  http_types.rs  lib.rs  parse.rs  state.rs  tests.rs
crates/h2session/src/frame/: mod.rs  tests.rs
crates/h2session/tests/: integration_test.rs
crates/h2session/tests/fixtures/: mod.rs
crates/h3session/: Cargo.toml
crates/h3session/src/: frame.rs  lib.rs  qpack.rs  state.rs
crates/http-collator/: Cargo.toml
crates/http-collator/src/: connection.rs  exchange.rs  h1.rs  lib.rs  tests.rs  traits.rs
crates/http-collator/src/h1/: tests.rs
examples/: generate_real_traffic.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_http1.rs  fuzz_parse.rs  fuzz_structured.rs
src/: frame.rs  lib.rs  parse.rs  state.rs
tests/: integration_test.rs
tests/fixtures/: mod.rs  real_traffic_expected.json
