[workspace]
members = ["crates/h2session", "crates/http-collator", "fuzz"]
default-members = ["crates/h2session", "crates/http-collator"]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
bytes = "1"
http = "1"
httparse = "1"
loona-hpack = "0.4"
dashmap = "6.1.0"
tracing = "0.1"
rstest = "0.26"
h2session = { path = "crates/h2session" }
http-collator = { path = "crates/http-collator" }
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }

[profile.fuzz]
inherits = "release"
debug = 1
