[package]
name = "h2session"
version.workspace = true
edition.workspace = true

[features]
tracing = ["dep:tracing"]

[dependencies]
loona-hpack.workspace = true
dashmap.workspace = true
http.workspace = true
tracing = { workspace = true, optional = true }

[dev-dependencies]
h2 = "0.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
rstest.workspace = true
