[package]
name = "h2session"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Stateful HTTP/2 frame parser with HPACK support for passive traffic monitoring"
keywords = ["http2", "hpack", "parser", "network", "monitoring"]
categories = ["network-programming", "parser-implementations"]

[features]
tracing = ["dep:tracing"]

[dependencies]
loona-hpack.workspace = true
dashmap.workspace = true
http.workspace = true
tracing = { workspace = true, optional = true }

[dev-dependencies]
h2 = "0.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
rstest.workspace = true
