[package]
name = "h3session"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "HTTP/3 frame parser and QPACK header decompression for stream-level data"

[features]
default = ["tracing"]
tracing = ["dep:tracing"]

[dependencies]
bytes = { workspace = true }
http = { workspace = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
rstest = { workspace = true }
