[package]
name = "http-collator"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Collates raw network data events into complete HTTP request/response exchanges"
keywords = ["http", "http2", "collation", "network", "monitoring"]
categories = ["network-programming", "parser-implementations"]

[dependencies]
bytes.workspace = true
dashmap.workspace = true
h2session.workspace = true
http.workspace = true
httparse.workspace = true

[features]
_internal-h1 = []

[dev-dependencies]
rstest.workspace = true
