[package]
name = "http-collator"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Collates raw network data events into complete HTTP request/response exchanges"
keywords = ["http", "http2", "collation", "network", "monitoring"]
categories = ["network-programming", "parser-implementations"]

[features]
default = ["tracing"]
tracing = ["dep:tracing", "h2session/tracing", "h3session/tracing"]

[dependencies]
bytes.workspace = true
scc.workspace = true
h2session.workspace = true
h3session.workspace = true
http.workspace = true
httparse.workspace = true
tracing = { workspace = true, optional = true }

[dev-dependencies]
rstest.workspace = true
